made the header and a grid for the layout

--- a/index.html
+++ b/index.html
@@ -15,5 +15,33 @@
       <a href="#">4</a>
       <a href="#">5</a>
     </nav>
+    <main>
+      <header>
+        <h1>Title Text</h1>
+        <h2> Subtitle Text</h2>
+        
+      </header>
+      <article>
+          <div class="feat1"><img src="img/denmark_hat.png" alt=""></div>
+          <div class="feat2"><img src="img/1551247062099.jpg" alt=""></div>
+          <div class="feat3"><img src="img/1551246994325.jpg" alt=""></div>
+          <div class="wall"><img src="img/1551290013790.jpg" alt=""></div>
+          <div class="blog1">
+              <h3>Blog title</h3>
+              <p>Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text  
+              </p>
+          </div>
+          <div class="blog2">
+              <h3>Blog title</h3>
+              <p>Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text 
+              </p>
+          </div>
+          <div class="blog3">
+              <h3>Blog title</h3>
+              <p>Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder Placeholder Text placeHolder Placeholder Text placeHolder Placeholder Text placeHolder Placeholder Text placeHolder
+          </div>
+      </article>
+    </main>
+
 </body>
 </html>
