somehow it looks good and this is a good point to come back to

--- a/index.html
+++ b/index.html
@@ -25,11 +25,15 @@
         <h1>Title Text</h1>
         <h2> Subtitle Text</h2>
       </header>
+
+      <banner>
+      </banner>
+
       <article>
-          <div class="feat1"><img src="img/denmark_hat.png" alt=""></div>
-          <div class="feat2"><img src="img/1551247062099.jpg" alt=""></div>
-          <div class="feat3"><img src="img/1551246994325.jpg" alt=""></div>
-          <div class="banner"><img src="img/isaac_wide_banner.png" alt=""></div>
+        <div class="banner"><img src="img/isaac_wide_banner.png" width="100%" alt=""></div>
+          <div class="feat1"><img src="img/head.jpg" width="300" height="300" alt=""></div>
+          <div class="feat2"><img src="img/binding-of-isaac-items.png" width="300" height="200" alt=""></div>
+          <div class="feat3"><img src="img/Ugreed.jpg" width="300" height="200" alt=""></div>
           <div class="blog1">
               <h3>Blog title</h3>
               <p>Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text  
