--- a/index.html
+++ b/index.html
@@ -4,28 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Isaac</title>
+    <link rel="stylesheet" href="css/style.css">  
+    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Russo+One&display=swap" rel="stylesheet">
   </head>
 <body>
+  <style>
+    body{background-image: url("img/wood.png");}  
+  </style>
     <nav>
-      <a href="#">1</a>
-      <a href="#">2</a>
-      <a href="#">3</a>
-      <a href="#">4</a>
-      <a href="#">5</a>
+      <a href="#">Home</a>
+      <a href="#">Story</a>
+      <a href="#">Items List</a>
+      <a href="#">Boss List</a>
+      <a href="#">Buy</a>
     </nav>
     <main>
-      <style>
-      html{
-        background-image: url("img/wood.png");
-      }  
-      </style>
       <header>
-        <h1>Title Text</h1>
-        <h2> Subtitle Text</h2>
+        <div class="title-stack">
+          <h1>The Binding of Isaac</h1>
+          <h2> Crying Knives at Your Mother to Kill Mega-Satan</h2>
+        </div>
       </header>
-
       <banner>
       </banner>
 
@@ -35,17 +35,17 @@
           <div class="feat2"><img src="img/binding-of-isaac-items.png" width="300" height="200" alt=""></div>
           <div class="feat3"><img src="img/Ugreed.jpg" width="300" height="200" alt=""></div>
           <div class="blog1">
-              <h3>Blog title</h3>
+              <h3>Sad Little One</h3>
               <p>Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text  
               </p>
           </div>
           <div class="blog2">
-              <h3>Blog title</h3>
+              <h3>Mutilate Yourself to be Stronger</h3>
               <p>Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text 
               </p>
           </div>
           <div class="blog3">
-              <h3>Blog title</h3>
+              <h3>Kill Evil</h3>
               <p>Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder Placeholder Text placeHolder Placeholder Text placeHolder Placeholder Text placeHolder Placeholder Text placeHolder
           </div>
       </article>
