fixed title, fonts, and copyright

--- a/index.html
+++ b/index.html
@@ -35,20 +35,36 @@
           <div class="feat2"><img src="img/binding-of-isaac-items.png" width="300" height="200" alt=""></div>
           <div class="feat3"><img src="img/Ugreed.jpg" width="300" height="200" alt=""></div>
           <div class="blog1">
-              <h3>Sad Little One</h3>
-              <p>Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text  
+              <h3>A Sad Little One</h3>
+              <p>Isaac and his mother lived alone in a small house on a hill. Isaac kept to himself, drawing pictures and playing with his toys as his mom watched Christian broadcasts on the television.</p>
+
+              <p>Life was simple, and they were both happy.</p>
+
+              <p>That was, until the day Isaac's mom heard a voice from above:</p>
+
+              <p>"To prove your love and devotion, I require a sacrifice. Your son Isaac will be this sacrifice. Go into his room and end his life as an offering to me, to prove that you love me above all else!"</p>
+
+              <p>"Yes, Lord," she replied, grabbing a butcher's knife from the kitchen.
+                  Isaac, watching through a crack in the door, trembled in fear. Scrambling around his room to find a hiding place, he noticed a trapdoor to the basement, hidden under his rug. Without hesitation, he flung open the hatch just as his mother burst through his door and threw himself down into the unknown depths below.
+              </p>
               </p>
           </div>
           <div class="blog2">
               <h3>Mutilate Yourself to be Stronger</h3>
-              <p>Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text 
-              </p>
+              <p>Collect a variety of things and goodies hidden in the depths of youir home and soul: skeleton keys, pyromania, flies, spiders, ticks, dog treats, the shovel used to dig your own grave, scattered pieces of your dead cat, ipecac, and more.</p>
+              <p>Make contracts with the devil and give your humanity away for power, make a pact with  the powers from above to be blessed with strength, reject god’s offers and steal from the angles to kill the greatest evils yet to come...</p>
+              <p>With every strange trinket you come across, with every one you force into your flesh and being, for every unneeded poop joke shoved in at every possible moment, you become stronger, faster, and ready to face the horrors of the depths below...</p>
           </div>
           <div class="blog3">
               <h3>Kill Evil</h3>
-              <p>Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder text Placeholder Text placeHolder Placeholder Text placeHolder Placeholder Text placeHolder Placeholder Text placeHolder Placeholder Text placeHolder
+              <p>From the 4 + 1 horsemen of the apocalypse to fistulas, fallen angels to your mother’s heart, Polycephalus to Satan himself, the list of roadblocks trying to stop you from reaching your fate grows.</p>
+              <p>With every challenge there are rewards, and for every level deeper, your challenges grow larger, stronger, faster and more adept and better equipped to end your questioned existence</p>
+              <p>Let nothing stand in your way, let nothing slow you down, let every tear thrown at the monsters of the deep bring a stinging pain to your enemies and a shining victory for you</p>
           </div>
       </article>
+      <footer>
+        <p>&copy; 2019 Cooper Grinnell</p>
+      </footer>
     </main>
 
 </body>
